--- a/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
@@ -16,6 +16,17 @@
         <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="c4">
+        <th mat-header-cell *matHeaderCellDef> Actualizar </th>
+        <td mat-cell *matCellDef="let element">
+        <button 
+        matButton
+        [routerLink]="['edits', element.idUsuario]">
+          <mat-icon>edit</mat-icon>Actualizar
+        </button>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
