--- a/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
@@ -27,6 +27,15 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="c5">
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let element">
+          <button matButton
+          (click)="eliminar(element.idUsuario)">
+          <mat-icon>delete</mat-icon>Eliminar</button>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
