--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -1,22 +1,28 @@
-
 <div class="container">
     <mat-toolbar class="custom-toolbar">
-        <button mat-button aria-label="example icon-button with menu icon"
+        <button 
+            mat-button 
+            aria-label="example icon-button with menu icon"
             [matMenuTriggerFor]="menuUsuario">
-            <mat-icon> menu </mat-icon>Usuarios 
+            <mat-icon> menu </mat-icon>Usuarios
         </button>
-        <button mat-button aria-label="example icon-button with menu icon"
+
+        <button 
+            mat-button 
+            aria-label="example icon-button with menu icon"
             [matMenuTriggerFor]="menuOperacion">
-            <mat-icon> menu </mat-icon>Operacion 
+            <mat-icon> menu </mat-icon>Operacion
         </button>
     </mat-toolbar>
 
     <mat-menu #menuUsuario="matMenu">
-            <button mat-menu-item routerLink="/usuarios">Listar Usuarios</button>
-            <button mat-menu-item routerLink="/usuarios/nuevo">Registrarse</button>
+        <button mat-menu-item routerLink="/usuarios">Listar Usuarios</button>
+        <button mat-menu-item routerLink="/usuarios/nuevo">Registrarse</button>
+        <button mat-menu-item routerLink="/usuarios/buscar">Buscar Usuario</button>
     </mat-menu>
+
     <mat-menu #menuOperacion="matMenu">
-        <button mat-menu-item routerLink="operacion">Listar Operacion</button>
-        <button mat-menu-item routerLink="operacion/nuevo">Registrar operacion</button>
+        <button mat-menu-item routerLink="/operacion">Listar Operación</button>
+        <button mat-menu-item routerLink="/operacion/nuevo">Registrar Operación</button>
     </mat-menu>
 </div>
