--- a/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
@@ -46,7 +46,26 @@
   <td mat-cell *matCellDef="let element">
     {{ element.usuario?.idUsuario }}
   </td>
+
+  <ng-container matColumnDef="c8">
+          <th mat-header-cell *matHeaderCellDef> Actualizar </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="primary"
+              [routerLink]="['edits', element.idOperacion]">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </td>
+        </ng-container>
 </ng-container>
+        <ng-container matColumnDef="c9">
+          <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="warn"
+              (click)="eliminar(element.idOperacion)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
 
     <!-- HEADER row -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
