--- a/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
@@ -1,43 +1,49 @@
 <div class="form-container mat-elevation-z8">
+
   <h2>{{ edicion ? 'Editar Operación' : 'Registrar Operación' }}</h2>
 
   <form [formGroup]="form" (ngSubmit)="aceptar()">
 
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Categoría</mat-label>
-      <input matInput formControlName="categoria" required>
+      <input matInput formControlName="categoria">
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Tipo</mat-label>
-      <input matInput formControlName="tipo" required>
+      <input matInput formControlName="tipo">
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Monto</mat-label>
-      <input matInput type="number" formControlName="monto" required>
+      <input type="number" matInput formControlName="monto">
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Detalle</mat-label>
       <textarea matInput formControlName="detalle"></textarea>
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Fecha</mat-label>
-      <input matInput type="date" formControlName="fecha" required>
+      <input type="date" matInput formControlName="fecha">
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Usuario</mat-label>
-      <mat-select formControlName="usuarioId" required>
-        <mat-option *ngFor="let u of usuarios" [value]="u.idUsuario">{{ u.nombre }}</mat-option>
+      <mat-select formControlName="usuarioId">
+        <mat-option *ngFor="let u of usuarios" [value]="u.idUsuario">
+          {{ u.nombre }}
+        </mat-option>
       </mat-select>
     </mat-form-field>
 
-    <div class="buttons">
-      <button mat-raised-button color="primary" type="submit">{{ edicion ? 'Actualizar' : 'Guardar' }}</button>
-      <button mat-raised-button color="warn" type="button" (click)="cancelar()">Cancelar</button>
+    <div class="button-container">
+      <button mat-raised-button color="primary" class="action-btn" type="submit">
+        {{ edicion ? 'Actualizar' : 'Registrar' }}
+      </button>
     </div>
+
   </form>
+
 </div>
