--- a/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
@@ -1,44 +1,53 @@
 <div class="container">
-    <div style="text-align: center;margin:5%"><h2>Lista de Usuarios</h2></div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="c1">
-        <th mat-header-cell *matHeaderCellDef> ID</th>
-        <td mat-cell *matCellDef="let element"> {{element.idUsuario}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="c2">
-        <th mat-header-cell *matHeaderCellDef> nombre</th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="c3">
-        <th mat-header-cell *matHeaderCellDef> correo</th>
-        <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="c4">
-        <th mat-header-cell *matHeaderCellDef> Actualizar </th>
-        <td mat-cell *matCellDef="let element">
-        <button 
-        matButton
-        [routerLink]="['edits', element.idUsuario]">
-          <mat-icon>edit</mat-icon>
-        </button>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="c5">
-        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-        <td mat-cell *matCellDef="let element">
-          <button matButton
-          (click)="eliminar(element.idUsuario)">
-          <mat-icon>delete</mat-icon></button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+  <mat-card class="card-container">
+    <mat-card-header style="display: flex; justify-content: center; width: 100%;">
+  <mat-card-title>Lista de Usuarios</mat-card-title>
+</mat-card-header>
 
 
+    <mat-card-content>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 full-width">
+
+        <ng-container matColumnDef="c1">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let element"> {{ element.idUsuario }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="c2">
+          <th mat-header-cell *matHeaderCellDef> Nombre </th>
+          <td mat-cell *matCellDef="let element"> {{ element.nombre }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="c3">
+          <th mat-header-cell *matHeaderCellDef> Correo </th>
+          <td mat-cell *matCellDef="let element"> {{ element.correo }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="c4">
+          <th mat-header-cell *matHeaderCellDef> Actualizar </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="primary"
+              [routerLink]="['edits', element.idUsuario]">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="c5">
+          <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="warn"
+              (click)="eliminar(element.idUsuario)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      </table>
+    </mat-card-content>
+
+  </mat-card>
 </div>
