--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -1,17 +1,15 @@
 <div class="container">
     <mat-toolbar class="custom-toolbar">
-        <button 
-            mat-button 
-            aria-label="example icon-button with menu icon"
-            [matMenuTriggerFor]="menuUsuario">
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuUsuario">
             <mat-icon> menu </mat-icon>Usuarios
         </button>
 
-        <button 
-            mat-button 
-            aria-label="example icon-button with menu icon"
-            [matMenuTriggerFor]="menuOperacion">
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuOperacion">
             <mat-icon> menu </mat-icon>Operacion
+        </button>
+
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuBalance">
+            <mat-icon> menu </mat-icon>Balance
         </button>
     </mat-toolbar>
 
@@ -24,5 +22,10 @@
     <mat-menu #menuOperacion="matMenu">
         <button mat-menu-item routerLink="/operacion">Listar Operación</button>
         <button mat-menu-item routerLink="/operacion/nuevo">Registrar Operación</button>
+    </mat-menu>
+
+    <mat-menu #menuBalance="matMenu">
+        <button mat-menu-item routerLink="/balance">Listar Balance</button>
+        <button mat-menu-item routerLink="/balance/nuevo">Registrar Balance</button>
     </mat-menu>
 </div>
