--- a/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
@@ -26,7 +26,9 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Fecha</mat-label>
-      <input type="date" matInput formControlName="fecha">
+      <input matInput [matDatepicker]="picker" formControlName="Fecha" readonly>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
