--- a/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
@@ -1,18 +1,16 @@
 <div class="container">
-  <div style="text-align: center; margin: 5%;">
+  <div style="text-align: center; margin: 5%">
     <h2>Registro de Usuario</h2>
   </div>
 
-  <div style="text-align: center; margin: 5%;">
+  <div style="text-align: center; margin: 5%">
     <form [formGroup]="form" (submit)="aceptar()">
       @if(edicion){
-        <mat-form-field>
-          <mat-label>ID</mat-label>
-          <input matInput formControlName="codigo" />
-          <mat-error>
-            @if (form.get('codigo')?.hasError('required')) { Ingrese id}
-          </mat-error>
-        </mat-form-field>
+      <mat-form-field>
+        <mat-label>ID</mat-label>
+        <input matInput formControlName="codigo" />
+        <mat-error> @if (form.get('codigo')?.hasError('required')) { Ingrese id} </mat-error>
+      </mat-form-field>
 
       }
       <mat-form-field appearance="fill">
@@ -31,30 +29,29 @@
         <mat-error *ngIf="form.get('correo')?.hasError('required')">
           El correo es obligatorio
         </mat-error>
-         <mat-error *ngIf="form.get('correo')?.hasError('email')">
-    Debe ingresar un correo válido (debe incluir "@")
-  </mat-error>
+        <mat-error *ngIf="form.get('correo')?.hasError('email')">
+          Debe ingresar un correo válido (debe incluir "@")
+        </mat-error>
       </mat-form-field>
 
       <br />
-    <ng-container *ngIf="!edicion">
-      <mat-form-field appearance="fill">
-        <mat-label>Contraseña</mat-label>
-        <input matInput formControlName="contrasenia" type="password" />
-        <mat-error *ngIf="form.get('contrasenia')?.hasError('required')">
-          La contraseña es obligatoria
-        </mat-error>
-        <mat-error *ngIf="form.get('contrasenia')?.hasError('minlength')">
-      La contraseña debe tener 10 caracteres o mas
-    </mat-error>
-      </mat-form-field>
-</ng-container>
+      <ng-container *ngIf="!edicion">
+        <mat-form-field appearance="fill">
+          <mat-label>Contraseña</mat-label>
+          <input matInput formControlName="contrasenia" type="password" />
+          <mat-error *ngIf="form.get('contrasenia')?.hasError('required')">
+            La contraseña es obligatoria
+          </mat-error>
+          <mat-error *ngIf="form.get('contrasenia')?.hasError('minlength')">
+            La contraseña debe tener 10 caracteres o mas
+          </mat-error>
+        </mat-form-field>
+      </ng-container>
       <br />
 
       <div>
         <button mat-raised-button color="primary">Registrar</button>
       </div>
-
     </form>
   </div>
 </div>
