--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -15,6 +15,10 @@
         <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuAhorro">
             <mat-icon> menu </mat-icon>Ahorro
         </button>
+
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuRecurso">
+            <mat-icon> menu </mat-icon>recurso
+        </button>
     </mat-toolbar>
 
     <mat-menu #menuUsuario="matMenu">
@@ -35,5 +39,9 @@
     <mat-menu #menuAhorro="matMenu">
         <button mat-menu-item routerLink="/ahorro">Listar Ahorro</button>
         <button mat-menu-item routerLink="/ahorro/nuevo">Registrar Ahorro</button>
+    </mat-menu>
+    <mat-menu #menuRecurso="matMenu">
+        <button mat-menu-item routerLink="/recurso">Listar recursos</button>
+        <button mat-menu-item routerLink="/recurso/nuevo">Registrar recurso</button>
     </mat-menu>
 </div>
