--- a/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion.html
+++ b/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion.html
@@ -1,1 +1,4 @@
-<p>impuestooperacion works!</p>
+<router-outlet></router-outlet>
+<div [hidden]="route.children.length !== 0">
+    <app-impuestooperacion-list></app-impuestooperacion-list>
+</div>
