--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -19,6 +19,15 @@
         <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuRecurso">
             <mat-icon> menu </mat-icon>recurso
         </button>
+
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuImpuesto">
+            <mat-icon> menu </mat-icon>impuesto
+        </button>
+
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuImpuestooperacion">
+            <mat-icon> menu </mat-icon>impuesto-operacion
+        </button>
+        
     </mat-toolbar>
 
     <mat-menu #menuUsuario="matMenu">
@@ -43,5 +52,13 @@
     <mat-menu #menuRecurso="matMenu">
         <button mat-menu-item routerLink="/recurso">Listar recursos</button>
         <button mat-menu-item routerLink="/recurso/nuevo">Registrar recurso</button>
+    </mat-menu>
+    <mat-menu #menuImpuesto="matMenu">
+        <button mat-menu-item routerLink="/impuesto">Listar impuestos</button>
+        <button mat-menu-item routerLink="/impuesto/nuevo">Registrar impuestos</button>
+    </mat-menu>
+    <mat-menu #menuImpuestooperacion="matMenu">
+        <button mat-menu-item routerLink="/impuesto-operacion">Listar impuestos-operacion</button>
+        <button mat-menu-item routerLink="/impuesto-operacion/nuevo">Registrar impuestos-operacion</button>
     </mat-menu>
 </div>
