--- a/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
@@ -1,78 +1,70 @@
-
-
 <div class="container mat-elevation-z8">
-    <div style="text-align: center;margin:5%"><h2>Lista de Operaciones</h2></div>
+  <div style="text-align: center; margin: 5%"><h2>Lista de Operaciones</h2></div>
   <table mat-table [dataSource]="dataSource">
-
     <!-- ID -->
     <ng-container matColumnDef="c1">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let element">{{ element.idOperacion }}</td>
     </ng-container>
 
     <!-- Categoria -->
     <ng-container matColumnDef="c2">
-      <th mat-header-cell *matHeaderCellDef> Categoría </th>
+      <th mat-header-cell *matHeaderCellDef>Categoría</th>
       <td mat-cell *matCellDef="let element">{{ element.categoria }}</td>
     </ng-container>
 
     <!-- Tipo -->
     <ng-container matColumnDef="c3">
-      <th mat-header-cell *matHeaderCellDef> Tipo </th>
+      <th mat-header-cell *matHeaderCellDef>Tipo</th>
       <td mat-cell *matCellDef="let element">{{ element.tipo }}</td>
     </ng-container>
 
     <!-- Monto -->
     <ng-container matColumnDef="c4">
-      <th mat-header-cell *matHeaderCellDef> Monto </th>
+      <th mat-header-cell *matHeaderCellDef>Monto</th>
       <td mat-cell *matCellDef="let element">{{ element.monto }}</td>
     </ng-container>
 
     <!-- Fecha -->
     <ng-container matColumnDef="c5">
-      <th mat-header-cell *matHeaderCellDef> Fecha </th>
+      <th mat-header-cell *matHeaderCellDef>Fecha</th>
       <td mat-cell *matCellDef="let element">{{ element.fecha }}</td>
     </ng-container>
 
     <!-- Detalle -->
     <ng-container matColumnDef="c6">
-      <th mat-header-cell *matHeaderCellDef> Detalle </th>
+      <th mat-header-cell *matHeaderCellDef>Detalle</th>
       <td mat-cell *matCellDef="let element">{{ element.detalle }}</td>
     </ng-container>
 
     <!-- Usuario ID -->
-<ng-container matColumnDef="c7">
-  <th mat-header-cell *matHeaderCellDef> Usuario ID </th>
-  <td mat-cell *matCellDef="let element">
-    {{ element.usuario?.idUsuario }}
-  </td>
+    <ng-container matColumnDef="c7">
+      <th mat-header-cell *matHeaderCellDef>Usuario ID</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.usuario?.idUsuario }}
+      </td>
 
-  <ng-container matColumnDef="c8">
-          <th mat-header-cell *matHeaderCellDef> Actualizar </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="primary"
-              [routerLink]="['edits', element.idOperacion]">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-</ng-container>
-        <ng-container matColumnDef="c9">
-          <th mat-header-cell *matHeaderCellDef> Eliminar </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn"
-              (click)="eliminar(element.idOperacion)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+      <ng-container matColumnDef="c8">
+        <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="primary" [routerLink]="['edits', element.idOperacion]">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+    </ng-container>
 
-    <!-- HEADER row -->
+    <ng-container matColumnDef="c9">
+      <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="primary" 
+        (click)="eliminar(element.idOperacion)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-
-    <!-- DATA rows -->
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-
 </div>
