--- a/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
@@ -4,6 +4,13 @@
 
   <form [formGroup]="form" (ngSubmit)="aceptar()">
 
+    @if(edicion){
+      <mat-form-field>
+        <mat-label>ID</mat-label>
+        <input matInput formControlName="idoperacion" />
+      </mat-form-field>
+      }
+
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Categoría</mat-label>
       <input matInput formControlName="categoria">
@@ -26,7 +33,7 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Fecha</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="Fecha" readonly>
+      <input matInput [matDatepicker]="picker" formControlName="fecha" readonly>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
