--- a/FrontMoneyMentor/src/app/components/recursousuario/recursousuario.html
+++ b/FrontMoneyMentor/src/app/components/recursousuario/recursousuario.html
@@ -1,1 +1,4 @@
-<p>recursousuario works!</p>
+<div>
+<router-outlet></router-outlet> <div [hidden]="route.children.length !== 0"> 
+    <app-recursousuario-listar></app-recursousuario-listar>
+</div>
