--- a/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuariolistar/usuariolistar.html
@@ -27,7 +27,7 @@
           <th mat-header-cell *matHeaderCellDef> Actualizar </th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="primary"
-              [routerLink]="['edits', element.idUsuario]">
+              [routerLink]="['/app/edits', element.idUsuario]">
               <mat-icon>edit</mat-icon>
             </button>
           </td>
