--- a/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
@@ -1,23 +1,26 @@
 <div class="container">
   <div style="text-align: center; margin: 5%">
-    <h2>Registro de Usuario</h2>
+    <h2>{{tituloPagina}}</h2>
   </div>
 
   <div style="text-align: center; margin: 5%">
     <form [formGroup]="form" (submit)="aceptar()">
-      @if(edicion){
-      <mat-form-field>
-        <mat-label>ID</mat-label>
-        <input matInput formControlName="codigo" />
-        <mat-error> @if (form.get('codigo')?.hasError('required')) { Ingrese id} </mat-error>
-      </mat-form-field>
 
-      }
+      <ng-container *ngIf="edicion">
+        <mat-form-field>
+          <mat-label>ID</mat-label>
+          <input matInput formControlName="codigo" />
+        </mat-form-field>
+      </ng-container>
+
       <mat-form-field appearance="fill">
         <mat-label>Nombre</mat-label>
-        <input matInput formControlName="nombre" />
+        <input matInput formControlName="nombre" (input)="limitarLongitud('nombre', 20)">
         <mat-error *ngIf="form.get('nombre')?.hasError('required')">
           El nombre es obligatorio
+        </mat-error>
+        <mat-error *ngIf="form.get('nombre')?.hasError('maxlength')">
+          Máximo 20 caracteres
         </mat-error>
       </mat-form-field>
 
@@ -25,12 +28,12 @@
 
       <mat-form-field appearance="fill">
         <mat-label>Correo</mat-label>
-        <input matInput formControlName="correo" />
+        <input matInput formControlName="correo">
         <mat-error *ngIf="form.get('correo')?.hasError('required')">
           El correo es obligatorio
         </mat-error>
         <mat-error *ngIf="form.get('correo')?.hasError('email')">
-          Debe ingresar un correo válido (debe incluir "@")
+          Formato de correo inválido
         </mat-error>
       </mat-form-field>
 
@@ -50,7 +53,10 @@
       <br />
 
       <div>
-        <button mat-raised-button color="primary">Registrar</button>
+        <button mat-raised-button color="primary">
+          {{ edicion ? 'Actualizar' : 'Registrar' }}
+        </button>
+
       </div>
     </form>
   </div>
