--- a/FrontMoneyMentor/src/app/components/impuesto/impuesto-insert/impuesto-insert.html
+++ b/FrontMoneyMentor/src/app/components/impuesto/impuesto-insert/impuesto-insert.html
@@ -15,7 +15,12 @@
             }
             <mat-form-field appearance="fill">
                 <mat-label>tipo</mat-label>
-                <input matInput formControlName="tipo" />
+                <mat-select formControlName="tipo">
+                    <mat-option *ngFor="let t of tipo"[value]="t.tipo">
+                        {{t.tipo}}
+                    </mat-option>
+                </mat-select>
+
                 <mat-error *ngIf="form.get('tipo')?.hasError('required')">
                     El tipo es obligatorio
                 </mat-error>
@@ -23,8 +28,8 @@
             <br />
 
             <mat-form-field appearance="fill">
-                <mat-label>tasa</mat-label>
-                <input matInput formControlName="tasa" />
+                <mat-label>tasa (%)</mat-label>
+                <input matInput formControlName="tasa" readonly />
                 <mat-error *ngIf="form.get('tasa')?.hasError('required')">
                     Este campo es obligatorio
                 </mat-error>
