--- a/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.html
@@ -5,26 +5,51 @@
   <form [formGroup]="form" (ngSubmit)="aceptar()">
 
     @if(edicion){
-      <mat-form-field>
-        <mat-label>ID</mat-label>
-        <input matInput formControlName="idoperacion" />
-      </mat-form-field>
-      }
+    <mat-form-field>
+      <mat-label>ID</mat-label>
+      <input matInput formControlName="idoperacion" />
+    </mat-form-field>
+    }
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Categoría</mat-label>
-      <input matInput formControlName="categoria">
+      <mat-select formControlName="categoria">
+        <mat-option value="">Selecciona una categoría</mat-option>
+        <mat-option *ngFor="let c of categorias" [value]="c">
+          {{ c }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="form.get('categoria')?.hasError('required')">
+        Seleccione una categoría
+      </mat-error>
     </mat-form-field>
+
+
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Tipo</mat-label>
-      <input matInput formControlName="tipo">
+      <mat-select formControlName="tipo">
+        <mat-option value="">Selecciona tipo</mat-option>
+        <mat-option *ngFor="let t of tipos" [value]="t">
+          {{ t }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="form.get('tipo')?.hasError('required')">
+        Seleccione el tipo
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Monto</mat-label>
-      <input type="number" matInput formControlName="monto">
+      <input matInput type="number" formControlName="monto" />
+      <mat-error *ngIf="form.get('monto')?.hasError('required')">
+        El monto es obligatorio
+      </mat-error>
+      <mat-error *ngIf="form.get('monto')?.hasError('min')">
+        El monto no puede ser negativo
+      </mat-error>
     </mat-form-field>
+
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Detalle</mat-label>
@@ -33,9 +58,12 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Fecha</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="fecha" readonly>
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <input matInput [matDatepicker]="picker" formControlName="fecha" [min]="minFecha">
       <mat-datepicker #picker></mat-datepicker>
+
+      <mat-error *ngIf="form.get('fecha')?.hasError('required')">
+        La fecha es obligatoria
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
